--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "firebase": "^9.11.0",
     "framer-motion": "^7.5.3",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-intersection-observer": "^9.4.0",
     "react-scroll": "^1.8.7"
   },
