--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "deploy": " tsc && vite build && firebase deploy --only hosting:kabbajosephtimothy",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint",
+    "fix": "eslint --fix"
   },
   "dependencies": {
     "firebase": "^9.11.0",
@@ -18,19 +20,29 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-intersection-observer": "^9.4.0",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.168.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-scroll": "^1.8.4",
+    "@types/three": "^0.168.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.11",
+    "eslint": "^9.10.0",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
+    "lefthook": "^1.6.16",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
+    "typescript-eslint": "^8.5.0",
     "vite": "^3.1.0"
   }
 }
