--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,3 +19,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_KABBAJOSEPHTIMOTHY_9D508 }}'
           channelId: live
           projectId: kabbajosephtimothy-9d508
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '>=20.17.0'
+          check-latest: false
