--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "profileweb",
   "private": true,
+  "license": "MIT",
   "version": "2.0.0",
   "author": "Kabba Joseph Timothy",
   "engines": {
